Fixed vertical alignment

--- a/src/vs/base/parts/quickinput/browser/media/quickInput.css
+++ b/src/vs/base/parts/quickinput/browser/media/quickInput.css
@@ -146,6 +146,7 @@
 .quick-input-list {
 	line-height: 22px;
 	margin-top: 6px;
+	margin-bottom: -5px;
 }
 
 .quick-input-widget.hidden-input .quick-input-list {
